Format all display numbers as proper local string
** !fixup the google thing

--- a/src/mmw/js/src/analyze/templates/tableRow.html
+++ b/src/mmw/js/src/analyze/templates/tableRow.html
@@ -1,3 +1,3 @@
 <td>{{ type }}</td>
-<td class="strong text-right">{{ areaTrimmed }}</td>
+<td class="strong text-right">{{ area|round(2)|toLocaleString }}</td>
 <td class="strong text-right">{{ coveragePct }}</td>
