--- a/src/mmw/js/src/modeling/tr55/quality/templates/tableRow.html
+++ b/src/mmw/js/src/modeling/tr55/quality/templates/tableRow.html
@@ -1,2 +1,2 @@
 <td>{{ measure }}</td>
-<td class="strong text-left">{{ roundedLoad }}</td>
+<td class="strong text-left">{{ load|round(3)|toLocaleString }}</td>
